<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg3"
                android:padding="16dp"
                tools:context="com.em.edumanager.RegisterActivity">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/str_title_register"
            android:textSize="30sp"
            android:textColor="#000000" />

    <LinearLayout
            android:id="@+id/linearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="16dp">

        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/first_name"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#000000" />

            <EditText
                    android:id="@+id/firstnameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textColorHint="#888888"
                    android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_name"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#000000" />

            <EditText
                    android:id="@+id/lastnameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textColorHint="#888888"
                    android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#000000" />

            <EditText
                    android:id="@+id/emailText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textColorHint="#888888"
                    android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#000000" />

            <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textColorHint="#888888"
                    android:textColor="#000000"
                    android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/rePassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_password"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#000000" />

            <EditText
                    android:id="@+id/rePasswordText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textColorHint="#888888"
                    android:textColor="#000000"
                    android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <Button
            android:id="@+id/registerSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_save"
            android:textSize="20sp"
            android:background="#03DAC5"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textStyle="bold" />
</RelativeLayout>
