<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg3" >

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:text="@string/title_activity_maintain_student_info"
            android:textStyle="bold"
            android:textSize="18sp" />

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp" >

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Student ID: "
                />

        <TextView
                android:id="@+id/updateStudentID"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="59dp" >

        <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/major" />

        <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:entries="@array/majorName"
                android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/LinearLayout01"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="12dp" >

        <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

        <EditText
                android:id="@+id/updateAge"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/LinearLayout01"
            android:layout_alignTop="@+id/LinearLayout01"
            android:layout_marginTop="52dp"
            android:gravity="center|center_horizontal" >

        <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/remarks" />

        <EditText
                android:id="@+id/updateRemark"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/LinearLayout03"
            android:layout_below="@+id/LinearLayout03"
            android:layout_marginTop="14dp" >

        <Button
                android:id="@+id/saveButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/str_save"
                android:background="@android:color/holo_green_light"
                android:textColor="#FFFFFF"/>

        <Button
                android:id="@+id/deleteButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/str_delete"
                android:background="@android:color/holo_red_light"
                android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2" >

        <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/gender" />

        <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

            <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:text="@string/male" />

            <RadioButton
                    android:id="@+id/radioFeMale"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:orientation="vertical" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

            <EditText
                    android:id="@+id/firstNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                     />

            <EditText
                    android:id="@+id/lastNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                     />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
